2D Cursor "runs away" from mouse when dragging in UV Editor #86796

Closed
opened 2021-03-21 18:35:16 +01:00 by Matthew Hinson · 6 comments
Member

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: Radeon RX 580 Series ATI Technologies Inc. 4.5.13596 Core Profile Context 20.10.35.02 27.20.1034.6

Blender Version
Broken: version: 2.92.0, branch: master, commit date: 2021-02-24 16:25, hash: 02948a2cab
Worked: unknown

Short description of error
For certain image dimensions, dragging the 2D cursor around in the UV Editor doesn't work correctly: rather than sticking to the mouse pointer, the cursor gets ever further away from it.

Exact steps for others to reproduce the error

  • Open Blender and switch to the "UV Editing" workspace.

  • Open an 800x600 image in the UV Editor.

  • Switch to the Cursor tool.

  • Drag with LMB from the left side of the image to the right: the 2D cursor starts out at the correct position, but moves faster than the mouse pointer while dragging.

  • Switch the UV Editor's image to "Render Result."

  • Click somewhere on the (empty) image: the 2D cursor doesn't move.

  • Drag with LMB from the left side to the right: the 2D cursor moves faster than the mouse pointer.

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: Radeon RX 580 Series ATI Technologies Inc. 4.5.13596 Core Profile Context 20.10.35.02 27.20.1034.6 **Blender Version** Broken: version: 2.92.0, branch: master, commit date: 2021-02-24 16:25, hash: `02948a2cab` Worked: unknown **Short description of error** For certain image dimensions, dragging the 2D cursor around in the UV Editor doesn't work correctly: rather than sticking to the mouse pointer, the cursor gets ever further away from it. **Exact steps for others to reproduce the error** - Open Blender and switch to the "UV Editing" workspace. - Open an 800x600 image in the UV Editor. - Switch to the Cursor tool. - Drag with LMB from the left side of the image to the right: the 2D cursor starts out at the correct position, but moves faster than the mouse pointer while dragging. - Switch the UV Editor's image to "Render Result." - Click somewhere on the (empty) image: the 2D cursor doesn't move. - Drag with LMB from the left side to the right: the 2D cursor moves faster than the mouse pointer.
Author
Member

Added subscriber: @Matthew-Hinson

Added subscriber: @Matthew-Hinson
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Philipp Oeser self-assigned this 2021-03-22 10:48:07 +01:00
Member

Confirmed, will check on this.

Confirmed, will check on this.

This issue was referenced by 56df673be2

This issue was referenced by 56df673be271c10200d758e0b0e891750103f8d6
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#86796
No description provided.